Fixed the whitespace issue under footer, added labels for registration and login and unified the nav links

--- a/attendancer/frontend/src/styles.sass
+++ b/attendancer/frontend/src/styles.sass
@@ -1,6 +1,7 @@
 //Setup -------------------------------------------------------------------------
 $color-brand: #213F9A
 $color-brand-dark: #1b3380
+$color-brand-light: #1e54f7
 $color-surface: #EFF1F2
 $color-danger: #A41012
 $color-danger-dark:#700809
@@ -91,12 +92,12 @@ h1
 
 .nav-link
   color: $color-text-dark
-  font-weight: 600
+  font-weight: 700
   letter-spacing: 0.015rem
   cursor: pointer
 
   &:hover
-    opacity: 0.7
+    color: $color-brand-light
 
 .button-create
   @include button-reset
